required changes for users to migrate from one version of MapServer to the
next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the Subversion log comments.

Current Version (5.3-dev, SVN trunk):
------------------------------------

- Fixed GetFeature through tileindex bug: the tileindex of the shape found 
  wasn't set properly in the resultcache object. (#2359)

- Removed comma to correct WCS 1.1 Coverages formatting in payload directory. 
  (#2764)

- Correct bug when LABEL_NO_CLIP in combination with minfeaturesize (#2758) 

- Fix a label size computation for AGG bug when scalefactor is used (#2756)

- various SOS updates for CITE compliance (#2646)

- Added support for static linking with the lib gd in configure 
  script (#2696)

- Support OpenLayer's ol:opacity extension to OGC Web Map Context docs (#2746)

- Added MS_VERSION_NUM for use with #if statements in code based on 
  libmapserver (#2750)

- Fixed the configure script: failed to detect php5 on ubuntu. (#2365)

- Fixed a memory leak associated with not deleting the lexer buffer
  before parsing certain types of strings. (#2729)

- Added legend graphics for layer of type annotation 
  for the AGG and GD renderer (#1523)

- Masking the out-of-range characters to avoid the crash 
  in the AGG renderer (#2739)

- Accept WMS requests in which the optional SERVICE parameter is missing. 
  A new test was incorrectly added in 5.2.0 that resulted in the error 
  "Incomplete WFS request: SERVICE parameter missing" when the SERVICE 
  parameter was missing in WMS requests in which the SERVICE parameter is 
  optional (#2737)

- Support for the MapInfo style zoom layering option (#2738)

- Implement Equals and GetHashCode properly for the mapscript C# classes

- Expose msConnectLayer to the SWIG mapscript interface with a new